src/components/footer/scrollToTop/ScrollToTop.module.css
.container {
    --position-offset: 95%;

    position: fixed;

    top: var(--position-offset);
    left: var(--position-offset);
    font-size: 2rem;
}

.link {
    background-color: var(--color-text);
    color: var(--color-background);

    width: max-content;

    margin-inline: auto;

    padding: .125rem .625rem 0 .625rem;

    border-radius: .45rem;

    display: flex;
    align-items: center;
    justify-content: center;
}

@media (max-width: 1650px) {
    .container {
        top: 92.5%;

        left: 40%;
        right: 40%;
    }
}

